--- a/development.ini
+++ b/development.ini
@@ -15,7 +15,7 @@ pyramid.includes =
     pyramid_debugtoolbar
 
 ; sqlalchemy.url = sqlite:///%(here)s/stocks_api.sqlite
-sqlalchemy.url = postgres://user:password@localhost:5432/stocks_api
+sqlalchemy.url = postgres://chris:1234@localhost:5432/stocks_api
 
 retry.attempts = 3
 
